ubiquity (2.0.1) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Check to see whether X crashed or ubiquity crashed before attempting
    to bail into the noninteractive frontend from only-ubiquity mode
    (LP: #444901).

  [ Colin Watson ]
  * Rewrite X_LOADTEMPLATEFILE commands in case they refer to template files
    in the /target chroot (LP: #452118).
  * Install -generic-pae kernels if necessary; this requires some custom
    hacks since -generic-pae isn't in the live filesystem (LP: #413135).
  * Don't do kernel installation/removal in oem-config.

  [ Mario Limonciello ]
  * Mythbuntu: Don't allow "removing" LIRC as it's not supported with install.

  [ Roman Shtylman ]
  * Fixed India timezone map (LP: #453009) 

 -- Roman Shtylman <shtylman@gmail.com>  Sun, 18 Oct 2009 20:51:15 -0400

ubiquity (2.0.0) karmic; urgency=low

  [ Colin Watson ]
  * Bump to a stable version number series for Ubuntu 9.10.

    The main reason for the version bump was because we incorporated
    oem-config and needed to jump past its version numbers, but really
    Ubiquity 2.0.0 is quite different from Ubiquity 1.0.0 despite most of
    the changes being gradual and incremental. 3.5 years and nearly 5000
    lines of changelog entries later, we have several active developers,
    lots more translations, apport integration, a new partitioner,
    migration-assistant, automation, Mythbuntu and noninteractive frontends,
    Wubi, reinstallation without reformatting, a new timezone map,
    accessibility, many UI improvements, a slideshow, plugin support, and
    much more. Here's to version 3!

  * Install kernel headers to match the kernel (LP: #413135).
  * Recommend dmraid to ensure consistent behaviour across Ubuntu flavours
    (it was already present on the Ubuntu desktop CD, but e.g. not on
    Kubuntu).
  * If dmraid devices are active, then create
    /var/lib/disk-detect/activate_dmraid so that partman will exclude slave